# FairBudget

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  app.ui  expense_table.cpp  expense_table.h  expense_table.ui  owed_table.cpp  owed_table.h  owed_table.ui  payment_table.cpp  payment_table.h  payment_table.ui  person_table.cpp  person_table.h  person_table.ui
scripts/: init_db.py
src/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp
src/delegates/: combo_box_delegate.cpp  combo_box_delegate.h  entity_choice_delegate.cpp  entity_choice_delegate.h  entity_options_loader.cpp  entity_options_loader.h
src/entities/: entity_interface.h  expense.cpp  expense.h  income_period.cpp  income_period.h  payment.cpp  payment.h  person.cpp  person.h  personal_budget.cpp  personal_budget.h
src/forms/: add_expense_form.cpp  add_expense_form.h  add_expense_form.ui  add_payment_form.cpp  add_payment_form.h  add_payment_form.ui  add_person_form.cpp  add_person_form.h  add_person_form.ui
src/models/: expense.cpp  expense.h  expense_model.cpp  expense_model.h  model_interface.h  payment.cpp  payment.h  payment_model.cpp  payment_model.h  person.cpp  person.h  person_model.cpp  person_model.h
src/repositories/: entity_repository.cpp  entity_repository.h  expense_repository.cpp  expense_repository.h  payment_repository.cpp  payment_repository.h  person_repository.cpp  person_repository.h
src/services/: budget_calculator.cpp  budget_calculator.h  entity_manager.cpp  entity_manager.h  persistence_manager.cpp  persistence_manager.h  report_builder.cpp  report_builder.h  table_formatter.cpp  table_formatter.h  unit_of_work.cpp  unit_of_work.h  utils.cpp  utils.h
src/widgets/: expense_table.cpp  expense_table.h  payment_table.cpp  payment_table.h  person_table.cpp  person_table.h  table_widget_interface.h
tests/: CMakeLists.txt
tests/entities/: expense_test.cpp
tests/forms/: add_expense_test.cpp  add_person_test.cpp
tests/services/: budget_calculator_test.cpp  utils_test.cpp
